fixed horizontal scroll

--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body {
   min-height: 100vh;
-  width: 100vw;
   background-color: #1c3a5c;
   color: #ffffff;
   display: flex;
